// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Probar la clase de Citas Actualizar cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "23/08/2026",
      "hora": "10:30",
      "id": 1787521776980,
      "mascota": "Billie",
      "propietario": "José Miguel",
      "sintomas": "Solo duerme",
      "telefono": "6666666",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "23/08/2026",
      "hora": "10:30",
      "id": 1787521776980,
      "mascota": "Hook",
      "propietario": "José Miguel",
      "sintomas": "Solo duerme",
      "telefono": "6666666",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": [],
}
`;
